[package]
name = "signatory_kit"
version = "1.0.0"
description = "Rust Signatory Kit"
authors = ["cleveng <cleveng@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/cakioe/signatory.git"
rust-version = "1.60.0"
keywords = ["signature", "base64", "md5", "timestamp", "serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
base64 = "0.22.1"
md5 = "0.7.0"
chrono = "0.4.38"

[features]
default = []

[package.metadata.docs.rs]
all-features = true